[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/aro.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Aro/aro.gd" type="Script" id=2]
[ext_resource path="res://Escenas/SFX/SFX.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.3792, 10.43 )

[sub_resource type="Animation" id=3]
resource_name = "kill"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.17464, 3.96033 )

[node name="Aro" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -0.0468225 )
polygon = PoolVector2Array( 6.38676, 2.17306, 7.00277, 2.11212, 7.9375, 0.9375, 8.0625, -6.0625, 6.75, -6, 6.8756, -6.9144, 6.38676, -6.91172, 6.44576, -3.78514, 7.125, -3.9375, 7.0625, -1.625, 6.38676, -1.89739 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -0.0468225 )
polygon = PoolVector2Array( -6.41453, 2.05508, -7.02969, 2.05957, -8, 1.0625, -8, -5.9375, -7, -6, -7, -6.9375, -6.35554, -6.67576, -6.35554, -4.02111, -6.9375, -4, -7, -2.125, -6.23755, -2.01538 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.157669, -2.57524 )
scale = Vector2( 0.805543, 0.500718 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -0.210224, -2.73291 )
shape = SubResource( 2 )

[node name="timeqf" type="Timer" parent="."]
wait_time = 2.0

[node name="timetoup" type="Timer" parent="."]
wait_time = 0.2

[node name="timetokill" type="Timer" parent="."]
wait_time = 15.0

[node name="killanim" type="AnimationPlayer" parent="."]
anims/kill = SubResource( 3 )

[node name="areap" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areap"]
position = Vector2( -0.0589924, -2.47767 )
shape = SubResource( 4 )

[node name="SFX" parent="." instance=ExtResource( 3 )]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="timeout" from="timeqf" to="." method="_on_timeqf_timeout"]
[connection signal="timeout" from="timetoup" to="." method="_on_timetoup_timeout"]
[connection signal="timeout" from="timetokill" to="." method="_on_timetokill_timeout"]
[connection signal="animation_finished" from="killanim" to="." method="_on_killanim_animation_finished"]
[connection signal="body_entered" from="areap" to="." method="_on_areap_body_entered"]
[connection signal="body_exited" from="areap" to="." method="_on_areap_body_exited"]
